--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,11 @@ body {
     background-color: #435165;
     margin: 0;
 }
+.error-message {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+}
 .login, .register {
     width: 400px;
     background-color: #ffffff;
