--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,10 @@
             <label for="agronomists">Agronomists</label>
             <input type="radio" id="staff" name="role" value="staff">
             <label for="staff">Staff</label>
-            <input type="radio" id="administrator" name="role" value="administrator">
-            <label for="administrator">Administrator</label>
+            <input type="radio" id="admin" name="role" value="admin">
+            <label for="admin">Administrator</label>
         </div>
-        <div class="msg">{{ msg }}</div>
+        <div class="error-message">{{ msg }}</div>
         <input type="submit" value="Login">
     </form>
 </div>
