--- a/static/style.css
+++ b/static/style.css
@@ -165,3 +165,64 @@ body.loggedin {
   padding: 5px;
   margin: 0 0 10px 0;
 }
+
+.button-container {
+    margin-top: 20px;
+    display: flex;
+}
+.button-container a {
+    display: block;
+    width: 200px;
+    padding: 10px;
+    margin-right: 10px; /* 调整按钮之间的右侧间距 */
+    text-align: center;
+    background-color: #4a536e; /* 设置按钮背景颜色为灰色 */
+    color: #fff; /* 设置按钮文字颜色为白色 */
+    text-decoration: none;
+    border-radius: 5px;
+}
+.button-container a:hover {
+    background-color: #364152; /* 鼠标悬停时按钮背景颜色变化 */
+}
+.button-container a i {
+    margin-right: 5px;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+.container h2 {
+    text-align: center;
+}
+.container form {
+    margin-top: 20px;
+}
+.container label {
+    display: block;
+    margin-bottom: 5px;
+}
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 3px;
+    background-color: #4a536e;
+    color: #fff;
+    cursor: pointer;
+}
+input[type="submit"]:hover {
+    background-color: #364152;
