--- a/templates/admin_edit_profile.html
+++ b/templates/admin_edit_profile.html
@@ -5,23 +5,33 @@
 {% block content %}
 <div class="container">
     <h2>Edit Profile</h2>
-    <form action="/update_profile" method="post">
+    <form action="{{ url_for('admin.edit_profile') }}" method="post">
+        <label for="first_name">ID:</label>
+        <input type="text" id="id" name="id" value="{{ results['admin_id'] }}" disabled>
+
         <label for="first_name">First Name:</label>
-        <input type="text" id="first_name" name="first_name" value="John">
+        <input type="text" id="first_name" name="first_name" value="{{ results['first_name'] }}">
 
         <label for="last_name">Last Name:</label>
-        <input type="text" id="last_name" name="last_name" value="Doe">
+        <input type="text" id="last_name" name="last_name" value="{{ results['last_name'] }}">
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" value="john@example.com">
+        <input type="email" id="email" name="email" value="{{ results['email'] }}">
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password">
+        <label for="phone">Work Photo:</label>
+        <input type="text" id="phone" name="phone" value="{{ results['phone'] }}">
 
-        <label for="confirm_password">Confirm Password:</label>
-        <input type="password" id="confirm_password" name="confirm_password">
+        <label for="date_hired">Hire Date:</label>
+        <input type="text" id="date_hired" name="date_hired" value="{{ results['date_hired'] }}" disabled>
+
+        <label for="position">Position:</label>
+        <input type="text" id="position" name="position" value="{{ results['position'] }}">
+
+        <label for="department">Department:</label>
+        <input type="text" id="department" name="department" value="{{ results['department'] }}" disabled>
 
         <input type="submit" value="Update">
     </form>
+
 </div>
 {% endblock %}
