--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -9,20 +9,52 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Change Password</h2>
-        <form action="/change_password" method="post">
-            <label for="old_password">Old Password:</label>
-            <input type="password" id="old_password" name="old_password">
-
-            <label for="new_password">New Password:</label>
-            <input type="password" id="new_password" name="new_password">
-
-            <label for="confirm_password">Confirm Password:</label>
-            <input type="password" id="confirm_password" name="confirm_password">
-
-            <input type="submit" value="Update">
-        </form>
+<div class="container">
+    <h2>Change Password</h2>
+    {% if error_msg %}
+    <div class="alert alert-danger" role="alert">
+        {{ error_msg }}
     </div>
+    {% endif %}
+    <form id="changePasswordForm" action="/change_password" method="post" onsubmit="return validateForm()">
+        <label for="old_password">Old Password:</label>
+        <input type="password" id="old_password" name="old_password" required>
+
+        <label for="new_password">New Password:</label>
+        <input type="password" id="new_password" name="new_password" required
+               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+               title="Password must be at least 8 characters long and include at least one lowercase letter, one uppercase letter, and one digit">
+
+        <label for="confirm_password">Confirm Password:</label>
+        <input type="password" id="confirm_password" name="confirm_password" required
+               pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+               title="Password must be at least 8 characters long and include at least one lowercase letter, one uppercase letter, and one digit">
+
+        <input type="submit" value="Update">
+        <div id="passwordError" class="error-message"></div>
+    </form>
+</div>
+<script>
+        function validateForm() {
+            var newPassword = document.getElementById("new_password").value;
+            var confirmPassword = document.getElementById("confirm_password").value;
+            var passwordError = document.getElementById("passwordError");
+
+            if (newPassword !== confirmPassword) {
+                passwordError.textContent = "New password and confirm password must match";
+                return false;
+            }
+
+            var passwordPattern = /^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$/;
+            if (!passwordPattern.test(newPassword)) {
+                passwordError.textContent = "Password must be at least 8 characters long and include at least one lowercase letter, one uppercase letter, and one digit";
+                return false;
+            }
+
+            return true;
+        }
+
+
+</script>
 </body>
 </html>
