--- a/static/style.css
+++ b/static/style.css
@@ -226,3 +226,59 @@ input[type="submit"] {
 }
 input[type="submit"]:hover {
     background-color: #364152;
+}
+
+.block_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    margin: 20px auto;
+}
+
+.block {
+    width: calc(25% - 20px);
+    height: 200px;
+    border: 1px solid #ccc;
+    margin: 10px;
+    padding: 10px;
+    text-align: center;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.block i {
+    font-size: 3em;
+    margin-bottom: 10px;
+}
+
+.block a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.table-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 20px;
+    border-collapse: collapse;
+}
+
+.table-container th, .table-container td {
+    border: 1px solid #dddddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.table-container th {
+    background-color: #f2f2f2;
+    color: #333;
+    min-width: 100px;
+}
+
+.table-container td {
+    min-width: 100px;
+}
+
