--- a/templates/admin_edit_profile.html
+++ b/templates/admin_edit_profile.html
@@ -5,9 +5,12 @@
 {% block content %}
 <div class="container">
     <h2>Edit Profile</h2>
-    <form action="{{ url_for('admin.edit_profile') }}" method="post">
-        <label for="first_name">ID:</label>
+    <form action="{{ url_for('edit_profile', change_role=change_role, change_id=change_id) }}" method="post">
+        <label for="id">ID:</label>
         <input type="text" id="id" name="id" value="{{ results['id'] }}" disabled>
+
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" value="{{ results['username'] }}" disabled>
 
         <label for="first_name">First Name:</label>
         <input type="text" id="first_name" name="first_name" value="{{ results['first_name'] }}">
