--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -3,6 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h2>User Landing Page</h2>
-<p>Welcome back, {{ username }}!</p>
+<h2>Guide</h2>
+<p>weeds</p>
+<p>pests</p>
 {% endblock %}
