--- a/templates/admin_profile.html
+++ b/templates/admin_profile.html
@@ -5,11 +5,14 @@
 {% block content %}
 <h2>{{ results['username'] }} Profile</h2>
 <div>
-    <p>Your account details are below:</p>
     <table>
         <tr>
             <td>ID:</td>
             <td>{{ results['id'] }}</td>
+        </tr>
+        <tr>
+            <td>Username:</td>
+            <td>{{ results['username'] }}</td>
         </tr>
         <tr>
             <td>First Name:</td>
@@ -45,7 +48,7 @@
         </tr>
     </table>
     <div class="button-container">
-        <a href="{{ url_for('admin.edit_profile') }}"><i class="fa fa-edit" aria-hidden="true"></i>Edit Profile</a>
+        <a href="{{ url_for('edit_profile', change_role=session['role'], change_id=session['id']) }}"><i class="fa fa-edit" aria-hidden="true"></i>Edit Profile</a>
         <a href="/change_password"><i class="fa fa-lock" aria-hidden="true"></i>Change Password</a>
     </div>
 </div>
