--- a/templates/add_staff.html
+++ b/templates/add_staff.html
@@ -1,16 +1,14 @@
 {% if session.get('role') == 'admin' %}
 {% extends 'admin_layout.html' %}
-{% elif session.get('role') == 'staff' %}
-{% extends 'staff_layout.html' %}
 {% else %}
 {% endif %}
 
-{% block title %}Add Agronomist{% endblock %}
+{% block title %}Add Staff{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h2>Add Agronomist</h2>
-    <form action="{{ url_for('add_agronomists') }}" method="post">
+    <h2>Add Staff</h2>
+    <form action="{{ url_for('add_staff') }}" method="post">
 
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required>
@@ -26,8 +24,8 @@
         <label for="last_name">Last Name:</label>
         <input type="text" id="last_name" name="last_name">
 
-        <label for="address">Address:</label>
-        <input type="text" id="address" name="address">
+        <label for="position">Position:</label>
+        <input type="text" id="position" name="position">
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="email">
