--- a/templates/admin_manage.html
+++ b/templates/admin_manage.html
@@ -12,20 +12,20 @@
         </a>
     </div>
     <div class="block">
-        <a href="add_agronomists.html">
+        <a href="{{ url_for('add_agronomists') }}">
             <i class="fas fa-users-cog"></i>
             <p>Add Agronomists</p>
         </a>
     </div>
 
     <div class="block">
-        <a href="view_staff.html">
+        <a href="{{ url_for('view_staff') }}">
             <i class="fas fa-user-alt" aria-hidden="true"></i>
             <p>View Staff</p>
         </a>
     </div>
     <div class="block">
-        <a href="add_staff.html">
+        <a href="{{ url_for('add_staff') }}">
             <i class="fas fa-user-plus" aria-hidden="true"></i>
             <p>Add Staff</p>
         </a>
