--- a/templates/agronomists_edit_profile.html
+++ b/templates/agronomists_edit_profile.html
@@ -1,12 +1,12 @@
-{% extends 'admin_layout.html' %}
+{% extends 'agronomists_layout.html' %}
 
 {% block title %}Profile{% endblock %}
 
 {% block content %}
 <div class="container">
     <h2>Edit Profile</h2>
-    <form action="{{ url_for('admin.edit_profile') }}" method="post">
-        <label for="first_name">ID:</label>
+    <form action="{{ url_for('edit_profile', change_role=change_role, change_id=change_id) }}" method="post">
+        <label for="id">ID:</label>
         <input type="text" id="id" name="id" value="{{ results['id'] }}" disabled>
 
         <label for="first_name">First Name:</label>
@@ -21,15 +21,12 @@
         <label for="phone">Work Photo:</label>
         <input type="text" id="phone" name="phone" value="{{ results['phone'] }}">
 
-        <label for="date_hired">Hire Date:</label>
-        <input type="text" id="date_hired" name="date_hired" value="{{ results['date_hired'] }}" disabled>
+        <label for="date_joined">Date Joined:</label>
+        <input type="text" id="date_joined" name="date_joined" value="{{ results['date_joined'] }}" disabled>
 
-        <label for="position">Position:</label>
-        <input type="text" id="position" name="position" value="{{ results['position'] }}">
-
-        <label for="department">Department:</label>
-        <input type="text" id="department" name="department" value="{{ results['department'] }}" disabled>
-
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address" value="{{ results['address'] }}">
+        
         <input type="submit" value="Update">
     </form>
 
