--- a/templates/admin_profile.html
+++ b/templates/admin_profile.html
@@ -5,6 +5,7 @@
 {% block content %}
 <h2>{{ results['username'] }} Profile</h2>
 <div>
+    <p>Details are below:</p>
     <table>
         <tr>
             <td>ID:</td>
