--- a/templates/agronomists_edit_profile.html
+++ b/templates/agronomists_edit_profile.html
@@ -1,4 +1,11 @@
+{% if session.get('role') == 'admin' %}
+{% extends 'admin_layout.html' %}
+{% elif session.get('role') == 'staff' %}
+{% extends 'staff_layout.html' %}
+{% elif session.get('role') == 'agronomists' %}
 {% extends 'agronomists_layout.html' %}
+{% else %}
+{% endif %}
 
 {% block title %}Profile{% endblock %}
 
