--- a/templates/staff_edit_profile.html
+++ b/templates/staff_edit_profile.html
@@ -1,6 +1,13 @@
+{% if session.get('role') == 'admin' %}
+{% extends 'admin_layout.html' %}
+{% elif session.get('role') == 'staff' %}
 {% extends 'staff_layout.html' %}
+{% elif session.get('role') == 'agronomists' %}
+{% extends 'agronomists_layout.html' %}
+{% else %}
+{% endif %}
 
-{% block title %}Profile{% endblock %}
+{% block title %}Edit Staff Profile{% endblock %}
 
 {% block content %}
 <div class="container">
