--- a/templates/view_agronomists.html
+++ b/templates/view_agronomists.html
@@ -5,11 +5,11 @@
 {% else %}
 {% endif %}
 
-{% block title %}View Agronomist{% endblock %}
+{% block title %}View Agronomists{% endblock %}
 
 {% block content %}
 <div class="container">
-    <h2>Agronomist List</h2>
+    <h2>Agronomists List</h2>
     {% if results %}
     <table class="table-container">
         <thead>
@@ -33,6 +33,12 @@
             <td>{{ result.last_name }}</td>
             <td>{{ result.email }}</td>
             <td>{{ result.phone }}</td>
+            <td class="center-align"><a
+                    href="{{ url_for('edit_profile', change_role='agronomists', change_id=result.id) }}"><i
+                    class="fas fa-user-edit" aria-hidden="true"></i></a></td>
+            <td class="center-align"><a href="{{ url_for('delete_agronomists', agronomists_id=result.id) }}"><i
+                    class="fas fa-user-slash"
+                    aria-hidden="true"></i></a></td>
 
         </tr>
         {% endfor %}
