--- a/static/style.css
+++ b/static/style.css
@@ -240,6 +240,7 @@ input[type="submit"]:hover {
     height: 200px;
     border: 1px solid #ccc;
     margin: 10px;
+    margin-bottom: 20px;
     padding: 10px;
     text-align: center;
     background-color: #f0f0f0;
