--- a/static/style.css
+++ b/static/style.css
@@ -237,7 +237,7 @@ input[type="submit"]:hover {
 
 .block {
     width: calc(25% - 20px);
-    height: 200px;
+    height: 220px;
     border: 1px solid #ccc;
     margin: 10px;
     margin-bottom: 20px;
@@ -248,6 +248,8 @@ input[type="submit"]:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .block i {
@@ -258,6 +260,53 @@ input[type="submit"]:hover {
 .block a {
     text-decoration: none;
     color: inherit;
+}
+
+.img_block {
+    width: calc(25% - 20px);
+    height: 220px;
+    border: none;
+    margin: 10px;
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: center;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.img_block i {
+    font-size: 3em;
+    margin-bottom: 10px;
+}
+
+.img_block a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.img_block p {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.image-container {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+}
+
+.image-container img {
+    display: block;
+    width: 90%;
+    height: auto;
+    margin-top: 20px;
 }
 
 .table-container {
