--- a/templates/agronomists_edit_profile.html
+++ b/templates/agronomists_edit_profile.html
@@ -26,7 +26,7 @@
         <input type="email" id="email" name="email" value="{{ results['email'] }}">
 
         <label for="phone">Work Photo:</label>
-        <input type="text" id="phone" name="phone" value="{{ results['phone'] }}">
+        <input type="text" id="phone" name="phone" value="{{ results['phone'] }}" pattern="[1-9][0-9]{10}">
 
         <label for="date_joined">Date Joined:</label>
         <input type="text" id="date_joined" name="date_joined" value="{{ results['date_joined'] }}" disabled>
