finish edit guide

--- a/templates/staff_manage.html
+++ b/templates/staff_manage.html
@@ -19,14 +19,14 @@
     </div>
 
     <div class="block">
-        <a href="edit_guide.html">
+        <a href="{{ url_for('edit_guide') }}">
             <i class="fas fa-book-reader"></i>
             <p>Edit Guide</p>
         </a>
     </div>
 
     <div class="block">
-        <a href="add_guide.html">
+        <a href="{{ url_for('add_guide') }}">
             <i class="fa fa-edit" aria-hidden="true"></i>
             <p>Add Guide</p>
         </a>
